src/objects/Chemo_Treatment__c.object
<CustomObject>
    <fields>
        <fullName>ApprovalURL__c</fullName>
        <label>ApprovalURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CRF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRF</label>
        <referenceTo>CRF__c</referenceTo>
        <relationshipLabel>Chemo Treatments</relationshipLabel>
        <relationshipName>Chemo_Treatments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CompletedDate__c</fullName>
        <label>CompletedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cycle_number__c</fullName>
        <label>Cycle number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_therapy__c</fullName>
        <label>Date of therapy</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Did_patient_go_off_study_treatment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Did patient go off study treatment?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_Time__c</fullName>
        <label>Effective Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Save_and_Close__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Save and Close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OriginalCRF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OriginalCRF</label>
        <referenceTo>Chemo_Treatment__c</referenceTo>
        <relationshipLabel>Chemo Treatments</relationshipLabel>
        <relationshipName>Chemo_Treatments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Patient_height__c</fullName>
        <label>Patient height</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient_weight__c</fullName>
        <label>Patient weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pg_Status__c</fullName>
        <label>Pg_Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Screening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treatment</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Root_CRF_Id__c</fullName>
        <label>Root CRF Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Completed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted by Lab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who is sign and submitting the record</description>
        <label>Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Chemo_Treatments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TestHarnessId__c</fullName>
        <externalId>true</externalId>
        <label>TestHarnessId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrialPatient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TrialPatient</label>
        <referenceTo>TrialPatient__c</referenceTo>
        <relationshipLabel>Chemo Treatments</relationshipLabel>
        <relationshipName>Chemo_Treatments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pg_ChemoTreatment_Id__c</fullName>
        <label>pg_ChemoTreatment_Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Chemo Treatment</label>
    <nameField>
        <label>Chemo Treatment CRF Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chemo Treatments</pluralLabel>
    <recordTypes>
        <fullName>AdHoc</fullName>
        <active>true</active>
        <label>AdHoc</label>
    </recordTypes>
    <recordTypes>
        <fullName>Approval_Pending</fullName>
        <active>true</active>
        <label>Approval Pending</label>
    </recordTypes>
    <recordTypes>
        <fullName>Live</fullName>
        <active>true</active>
        <label>Live</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Date_of_therapy_cannot_be_a_future_date</fullName>
        <active>true</active>
        <description>The date field should not be a future date.</description>
        <errorConditionFormula>Date_of_therapy__c &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Date_of_therapy__c</errorDisplayField>
        <errorMessage>You have entered a future date</errorMessage>
    </validationRules>
</CustomObject>